--- a/index.html
+++ b/index.html
@@ -1,55 +1,60 @@
 <!DOCTYPE html>
     <head>
+    <meta charset="UTF-8">
         <title>CSS Practice</title>
-        <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap" rel="stylesheet">
-        <style>
-            .card{
-                margin:auto;
-                width:300px;
-                height:500px;
-                border:1p solid gray
-                border-radius:3%;
-                overflow:hidden;
-            }
+            <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap" rel="stylesheet">
+            <style>
+                .card{
+                    margin:auto;
+                    width:300px;
+                    height:500px;
+                    border:1p solid gray
+                    border-radius:3%;
+                    overflow:hidden;
+                }
+            </style>
+            <style>
+                .prifile_img{
+                    width:100px;
+                    height:100px:
+                    border-radius:50%;
+                    padding-top:35px;
+                    padding-bottom:35px;
+                }
+            </style>
+            <style>
+                .name{
+                    text-align:center;
+                    font-size:25px;
+                    color:red;
+                    margin-top:10px;
+                    margin-left:20px;
+                    margin-right:20px;
+                    border-bottom:0.5px solid gray;
+                    padding-bottom:10px;
+                    font-family:'Antic Slab', cursive
+                }
+            </style>
+            <style>
+                intro{
+                    text-align:center;
+                    overflow-y:scroll;
+                    height:220px;
+                    padding-right:25px;
+                    padding-left:25px;
+                }
+            </style>
+            <style>
+                .profile_img_div{
+                    margin-bottom:15px;
+                    text-align:center;
+                    background-color:green;
+                }
 
-            .prifile_img{
-                width:100px;
-                height:100px:
-                border-radius:50%;
-                padding-top:35px;
-                padding-bottom:35px;
-            }
-
-            .name{
-                text-align:center;
-                font-size:25px;
-                color:red;
-                margin-top:10px;
-                margin-left:20px;
-                margin-right:20px;
-                border-bottom:0.5px solid gray;
-                padding-bottom:10px;
-                font-family:'Antic Slab', cursive
-            }
-
-            intro{
-                text-align:center;
-                overflow-y:scroll;
-                height:220px;
-                padding-right:25px;
-                padding-left:25px;
-            }
-
-            .profile_img_div{
-                margin-bottom:15px;
-                text-align:center;
-                background-color:green;
-            }
-
-            ::-webkit-scrollbar {
-                width:15px;
-            }
-        </style>
+                ::-webkit-scrollbar {
+                    width:15px;
+                }
+            </style>
     </head>
     <body>
         <div class = "card">
