--- a/index.html
+++ b/index.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
     <head>
     <meta charset="UTF-8">
-        <title>CSS Practice</title>
         <link href="https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap" rel="stylesheet">
+        <title>CSS Practice</title>
         <style>
             .card{
-            margin:auto;
-            width:300px;
-            height:500px;
-            border:1p solid gray
-            border-radius:3%;
-            overflow:hidden;
-            }
+                margin:auto;
+                width:300px;
+                height:500px;
+                border:1p solid gray
+                border-radius:3%;
+                overflow:hidden;
+                }
         </style>
         <style>
             .prifile_img{
-            width:100px;
-            height:100px:
-            border-radius:50%;
-            padding-top:35px;
-            padding-bottom:35px;
-            }
+                width:100px;
+                height:100px:
+                border-radius:50%;
+                padding-top:35px;
+                padding-bottom:35px;
+                }
         </style>
         <style>
             .name{
-            text-align:center;
-            font-size:25px;
-            color:red;
-            margin-top:10px;
-            margin-left:20px;
-            margin-right:20px;
-            border-bottom:0.5px solid gray;
-            padding-bottom:10px;
-            font-family:'Antic Slab', cursive
-            }
+                text-align:center;
+                font-size:25px;
+                color:red;
+                margin-top:10px;
+                margin-left:20px;
+                margin-right:20px;
+                border-bottom:0.5px solid gray;
+                padding-bottom:10px;
+                font-family:'Antic Slab', cursive
+                }
         </style>
         <style>
             intro{
-            text-align:center;
-            overflow-y:scroll;
-            height:220px;
-            padding-right:25px;
-            padding-left:25px;
-            }
+                text-align:center;
+                overflow-y:scroll;
+                height:220px;
+                padding-right:25px;
+                padding-left:25px;
+                }
         </style>
         <style>
             .profile_img_div{
-            margin-bottom:15px;
-            text-align:center;
-            background-color:green;
-            }
+                margin-bottom:15px;
+                text-align:center;
+                background-color:#FAEBFF;
+                }
         </style>
         <style>
             ::-webkit-scrollbar {
